added more lines to readme.txt

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,3 @@
 mypasswords.txt
+my_photo.png
+myphoto1.png myphoto2.png myphoto3.png myphoto4.png myphoto5.png myphoto6.png myphoto7.png myphoto8.png myphoto9.png my_photo.png
